--- a/style.css
+++ b/style.css
@@ -124,6 +124,11 @@ a:hover {
   text-decoration: underline;
 }
 
+#background {
+  text-align: center;
+  max-width: 600px;
+  margin: 0 auto;
+
 #about {
   text-align: center;
   max-width: 600px;
