--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ h2 {
 }
 
 .image-circle {
-  max-width: 10%;
+  max-width: 40%;
   border-radius: 50%;
   border: 2px solid #003049
 }
@@ -111,7 +111,7 @@ ul {
 }
 
 ul li {
-  margin-right: 5px 0;
+  margin-right: 10%;
   list-style-type: disc;
   display: block;
 }
