--- a/style.css
+++ b/style.css
@@ -106,13 +106,14 @@ footer {
 }
 
 ul {
-  list-style-type: none;
-  padding: 0;
+  padding-left: 20px;
+  margin-left: 0;
 }
 
 ul li {
   margin-right: 10%;
   list-style-type: disc;
+  text-align: left;
 }
 
 a {
@@ -146,7 +147,7 @@ a:hover {
   margin: 0 auto;
 }
 
-#contact ol {
+#contact li {
   text-align: left;
   list-style-type: decimal;
   padding-left: 20px;
